applications/resume/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: resume 
  annotations:
    name: resume 
  labels:
    name: resume
