applications/resume/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: resume
  name: resume
  labels:
    app: resume
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: resume
  template:
    metadata:
      annotations:
      labels:
        app: resume
    spec:
      serviceAccountName: resume
      containers:
        - name: server
          image: vietanhs0817/resume:master-c67b894
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
