applications/resume/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: resume
  name: resume-server 
spec:
  selector:
    app: resume
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
